@@ -1,3 +1,6 @@
+2009-06-17 Iuri Fernandes <iurifq@gmail.com>
+* Modified "consulta 3" to text_field
+
 2009-06-14 Suzana Matos <suzana.matos@gmail.com>
 * Populate DB
 
